<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AccountInfoActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imageViewInfoLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_person_white_24dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="30dp" />

            <TextView
                android:id="@+id/textViewNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center"
                android:text="@string/nameString"
                android:textColor="@color/backgroundcolor"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textViewInfoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="29dp" />

            <TextView
                android:id="@+id/textViewEmailInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center"
                android:text="@string/emailInfo"
                android:textColor="@color/backgroundcolor"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textViewInfoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="29dp" />

            <TextView
                android:id="@+id/textViewEmailInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center"
                android:text="@string/universityInfoPage"
                android:textColor="@color/backgroundcolor"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textViewInfoUniversity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="1dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="29dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/backButtonInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/back"
                android:textColor="@color/backgroundcolor" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>