<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SatisfactionStatisticsActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/typeTextGraphs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:text="Type:"
                    android:textColor="@color/backgroundcolor"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinnerTypeGraph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/filterLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/filterTextViewGraphs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:text="Filter:"
                    android:textColor="@color/backgroundcolor"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinnerNssCategoryGraphs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewGraphTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/graph_title"
                android:textColor="@color/backgroundcolor"
                android:textSize="18sp" />


            <ViewSwitcher
                android:id="@+id/viewSwitcher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="105dp">

                <LinearLayout
                    android:id="@+id/pieChartLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/pieChart"
                        android:layout_width="match_parent"
                        android:layout_height="395dp"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="105dp">

                    </com.github.mikephil.charting.charts.PieChart>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/barChartLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/barChart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </com.github.mikephil.charting.charts.BarChart>

                </LinearLayout>

            </ViewSwitcher>


            <TextView
                android:id="@+id/textViewGraphDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="32dp"
                android:text="@string/graph_description"
                android:textColor="@color/backgroundcolor"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonBackStudentSatisfaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/backGraphs"
                android:textColor="@color/backgroundcolor" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>